--- a/allcss/home.css
+++ b/allcss/home.css
@@ -112,7 +112,7 @@
 .nav-menu ul li {
   list-style: none;
 }
-.nav-menu ul li a {
+.nav-menu li a {
   font-size: 16px;
   font-weight: 600;
   text-decoration: none;
